Fix overflow genres styles

--- a/src/styles/manga_item.module.scss
+++ b/src/styles/manga_item.module.scss
@@ -67,8 +67,9 @@
 }
 
 .genres {
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
   color: variables.$accent-font-color;
 }
 
